<resources>
    <string name="app_name">Petagram</string>
    <string name="opcion_contacto">Contacto</string>
    <string name="opcion_acerca">Acerca de</string>
    <string name="hint_contacto_nombre">Ingresa tu nombre</string>
    <string name="hint_contacto_correo">Ingresa tu correo</string>
    <string name="hint_contacto_mensaje">Escribe un mensaje</string>
    <string name="texto_boton_enviar_mensaje">Enviar comentario</string>
    <string name="titulo_contacto">CONTACTANOS</string>
    <string name="subtitulo_biografia">Biografia del desarrollador</string>
    <string name="nombre_biografia">Luis Adrián Balam Espadas</string>
    <string name="texto_biografia">Actualmente me encuentro cursando la especialización sobre desarrollo de aplicaciones moviles para Android con Java para seguir mejorando mis habilidades en la programación de aplicaciones moviles, misma que ofrece Coursera.</string>
    <string name="correo_biografia">Correo: correo@gmail.com</string>
    <string name="gracias_biografia">Gracias por usar Petagram</string>
    <string name="nombre_mascota">Bruno</string>
    <string name="aviso_sin_favoritos">Aqui podrás visualizar a tus ultimas 5 mascotas favoritas</string>
    <string name="aviso_favoritos">Mascotas favoritas</string>
    <string name="hint_cuenta">Nombre de usuario</string>
    <string name="texto_cuenta">Sincroniza Instagram</string>
    <string name="texto_boton_cuenta">SINCRONIZAR CUENTA</string>
    <string name="item_configurar">Configurar cuenta</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
