<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context="com.luisadrian.petagram.AcercaDesarrollador">

    <include
        android:id="@+id/toolBarAcercaDe"
        layout="@layout/toolbar">
    </include>

    <LinearLayout
        android:id="@+id/linearLayoutAcercaDe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/toolBarAcercaDe"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margen_top_contacto">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/perfilDesarrollador"
            android:layout_width="@dimen/tamaño_imagen_circular"
            android:layout_height="@dimen/tamaño_imagen_circular"
            android:src="@drawable/recurso_contactor_icono_people"
            app:civ_border="true"
            app:civ_border_color="@color/colorPrimary"
            app:civ_border_width="2dp"
            app:civ_shadow="true"
            app:civ_shadow_radius="6"
            app:civ_shadow_color="@color/colorPrimaryDark"
            android:layout_gravity="center_horizontal"/>

        <android.support.v7.widget.CardView
            android:id="@+id/cardViewBiografia"
            android:layout_width="@dimen/ancho_card_biografia"
            android:layout_height="@dimen/largo_card_biografia"
            card_view:cardCornerRadius="@dimen/radio_card"
            android:layout_marginTop="@dimen/margen_top_contacto"
            app:cardElevation="@dimen/elevation_cardview">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/tvSubtituloBiografia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subtitulo_biografia"
                    android:textStyle="italic"
                    android:textSize="@dimen/tamaño_subtitulo_biografia"/>

                <TextView
                    android:id="@+id/tvNombreBiografia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre_biografia"
                    android:layout_below="@id/tvSubtituloBiografia"
                    android:textStyle="bold"
                    android:textSize="@dimen/tamaño_nombre_biografia"
                    android:layout_gravity="center"
                    android:textColor="@color/colorPrimary"/>

                <TextView
                    android:id="@+id/tvBiografia"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margen_top_contacto"
                    android:text="@string/texto_biografia"/>

                <TextView
                    android:id="@+id/tvInfoContacto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margen_top_contacto"
                    android:text="@string/correo_biografia"/>

                <TextView
                    android:id="@+id/tvAgradecimiento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margen_top_contacto"
                    android:text="@string/gracias_biografia"
                    android:textStyle="bold|italic"
                    android:textColor="@color/colorPrimary"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</RelativeLayout>
